--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
  - python setup.py install
  - pwd
  - ls -l
+ - pip install --user -r requirements.txt
 
 # command to run tests
 script:
