--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ before_install:
 install:
  - python setup.py install
  - pwd
+ - whoami
  - ls -l
- - pip install --user -r requirements.txt
+#  - pip install --user -r requirements.txt
+ - pip install -r requirements.txt
 
 # command to run tests
 script:
