--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,19 @@ python:
   - "2.7"
 
 before_install:
-  - echo "Test"
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda2/bin:$PATH
+  - export DEPS="sympy=0.7.5 numpy=1.8 scipy=0.13 matplotlib ipython pytest"
+  - conda update --yes --no-deps conda
+  - conda update --yes conda
 
 install:
+ - conda install --yes -c conda conda-env
+ - conda create -n testenv --yes $DEPS pip python=$TRAVIS_PYTHON_VERSION
+ - source activate testenv
  - python setup.py install
- - pwd
- - whoami
- - ls -l
-#  - pip install --user -r requirements.txt
- - pip install -r requirements.txt
 
 # command to run tests
 script:
