--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - chmod +x miniconda.sh
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda2/bin:$PATH
-  - export DEPS="sympy=0.7.5 numpy=1.8 scipy=0.13 matplotlib ipython pytest"
+  - export DEPS="sympy numpy scipy matplotlib ipython pytest"
   - conda update --yes --no-deps conda
   - conda update --yes conda
 
@@ -20,4 +20,5 @@ install:
 
 # command to run tests
 script:
+ - python symbtools/tests/test_fast.py
  - python symbtools/tests/test_core.py
